--- a/csr1000v.config
+++ b/csr1000v.config
@@ -21,7 +21,7 @@ boot-start-marker
 boot-end-marker
 !
 !
-enable secret 9 $9$QamzP0485jQFfk$1R.5Q/Z4RPnNuiiRoFdCp1/PsD8P8EHu/1AP.63QZik
+enable secret 9 $t4qyheDFSGzP048sDik
 !
 no aaa new-model
 !
@@ -37,7 +37,7 @@ multilink bundle-name authenticated
 !
 spanning-tree extend system-id
 !
-username admin privilege 15 secret 9 $TGERSH
+username admin privilege 15 secret 9 $TGE$!%#$REHQ#YsgaayRSH
 !
 redundancy
 !
